--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <center>
-  <center>
+  <h1 style="background-color: khaki;"border-radius:30px;> File </h1>
     <nav>
         <ul>
           <h1>
