--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
           <h1>
             <li style="background-color: #AB784E;border-radius:40px;"><a href="https://kenjiejavellana.github.io/coffeemenu./">Coffeemenu</a></li>         
             <li style="background-color: #AB784E;border-radius:40px;"><a href="https://kenjiejavellana.github.io/videowebpage2/">videoLyrics</a></li>
-           <li style="background-color: #AB784E;border-radius:40px;"><a href="table.html">Table</a></li>
+           <li style="background-color: #AB784E;border-radius:40px;"><a href="https://kenjiejavellana.github.io/Table/">Table</a></li>
           <li style="background-color: #AB784E;border-radius:40px;"><a href="profile.html">Profile</a></li>
-          <li style="background-color: #AB784E;border-radius:30px;"><a href="https://kenjiejavellana.github.io/lyricsWebpage3/">audioaLyrics</a></li>
+          <li style="background-color: #AB784E;border-radius:30px;"><a href="https://kenjiejavellana.github.io/lyricsWebpage3/">audioLyrics</a></li>
         </ul>
           </h1>
     </nav>
